# fractal-tribute

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: forge-test.yml
cli_tools/: Cargo.toml
cli_tools/src/: main.rs
dnas/fractal_tribute/workdir/: dna.yaml
dnas/fractal_tribute/zomes/coordinator/fractal_tribute/: Cargo.toml
dnas/fractal_tribute/zomes/coordinator/fractal_tribute/src/: all_game_moves.rs  board.rs  board_images.rs  dna_properties.rs  evm_key_binding.rs  favourite_moves.rs  game_move.rs  lib.rs  participation_proof.rs  profile.rs
dnas/nft_payload/workdir/: dna.yaml
dnas/nft_payload/zomes/integrity/nft_payload/: Cargo.toml
dnas/nft_payload/zomes/integrity/nft_payload/src/: evm_key_binding.rs  lib.rs  payload.rs
old-rain/: CloneFactory.json  can-transfer.rain
old-ui/: package.json  tailwind.config.js  tsconfig.json
old-ui/src/: App.svelte  app.css
old-ui/src/lib/: Header.svelte  board.ts  game-move.ts  index.ts  types.ts
old-ui/src/lib/connect-wallet/: ConnectWallet.svelte  index.ts
old-ui/src/lib/evm-binding/: get-evm-key.ts
old-ui/src/lib/mint/: Mint.svelte
old-ui/src/old/routes/: BrowseNFTs.svelte  Home.svelte
pattern-masks/small/: 1.cache  10.cache  11.cache  12.cache  13.cache  14.cache  15.cache  16.cache  17.cache  2.cache  3.cache  4.cache  5.cache  6.cache  7.cache  8.cache  9.cache
rain/: .env.example  FlowERC721.json  contracts.config.json  expressions.json  foundry.toml  getOpmeta.ts  nft-flow.rain
rain/addresses/: flow-39210879.json  flow-39211294.json  flow-39236329.json  flow-39236370.json  flow-39237544.json  flow-39283528.json  flow-40060664.json  flow-40060770.json  flow-40060813.json  flow-40060886.json  flow-40060923.json  flow-40060956.json  flow-40464996.json  flow-40719705.json  flow-40719770.json  flow-40719834.json  flow-40720492.json  flow-40720969.json  flow-40723219.json  flow-40735176.json  flow-40735225.json  flow-40735754.json  flow-40735789.json  flow-40736777.json  flow-40754969.json  flow-40755420.json  flow-40789710.json  flow-40790003.json  flow-41823512.json  flow-41835078.json  flow-41876551.json  flow-41881215.json  flow-41892890.json  flow-48288223.json  flow-48291767.json  flow-48310577.json  flow-48310620.json  flow-48754723.json  flow-49430141.json  flow-49456936.json  (+4 more)
rain/broadcast/Deploy.s.sol/137/: run-1696361047.json  run-1696361053.json  run-1696368751.json  run-1696368771.json  run-1696409418.json  run-1696409509.json  run-1696409515.json  run-1697391174.json  run-1697391180.json  run-1698877725.json  run-1698877744.json  run-1698936178.json  run-1698936185.json  run-1699960519.json  run-1699960532.json  run-1700059221.json  run-1700059228.json  run-1702584100.json  run-1702584107.json  run-1702592323.json  run-1702592342.json
rain/interpreter/: interpreter.ts
rain/script/: Deploy.s.sol  DeployMumbai.s.sol
rain/src/: IWETH.sol  NativeTokenFlowCaller.sol  claim.json  mint.json  nft-flow.json  nft-flow.rain  snapshot.json
rain/test/: ForkTest.sol  NftTest.t.sol
rain/test/contracts/: SignContext.sol  Token.sol
tests/src/nft_payload/nft_payload/: all-payloads.test.ts  common.ts  evm-key-binding.test.ts  payload.test.ts  payloads-by-creator.test.ts
ui/: .env.example  index.html  package.json  tailwind.config.cjs  vite.config.ts
ui/src/: App.svelte  app.postcss
ui/src/lib/: Header.svelte  addresses.json  board.ts  constants.ts  game-move.ts  types.ts  utils.ts
ui/src/lib/abi/: IERC20.ts  IFlowERC1155V3.ts  NativeTokenFlowERC1155Caller.ts
ui/src/lib/components/: AdminModal.svelte  AllMyMoves.svelte  AllMyMovesAlt.svelte  AllNfts.svelte  AllocationLeaderboard.svelte  Board.svelte  BoardNew.svelte  BuildParticipation.svelte  CanvasBoard.svelte  Claim.svelte  Countdown.svelte  CreateEvmKeyBinding.svelte  CreateProfile.svelte  GameStats.svelte  HowToPlay.svelte  Identicon.svelte  LanguageSwitcher.svelte  MintMove.svelte  MoveSvg.svelte  MyMoveCard.svelte  NftCard.svelte  Overlay.svelte  Palette.svelte  Participation.svelte  ParticipationStat.svelte  PlayableBoard.svelte  RandomGameMoves.svelte  ReadOnlyBoardSvg.svelte  Shape.svelte  Tile.svelte  (+4 more)
ui/src/routes/: Gallery.svelte  Home.svelte  HostedRoutes.svelte  Leaderboard.svelte  MintNFT.svelte  Routes.svelte
workdir/: happ.yaml  web-happ.yaml
(+65 files in other folders)
