[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.1"
hdk = "=0.1.1"
holochain = "0.1.0"
serde = "1"

[workspace.dependencies.file_storage]
path = "dnas/fractal_tribute/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/fractal_tribute/zomes/integrity/file_storage"

[workspace.dependencies.fractal_tribute]
path = "dnas/fractal_tribute/zomes/coordinator/fractal_tribute"

[workspace.dependencies.fractal_tribute_integrity]
path = "dnas/fractal_tribute/zomes/integrity/fractal_tribute"
