[package]
name = "fractal_tribute"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fractal_tribute"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

fractal_tribute_integrity = { workspace = true } 

[features]
mock = ["hdk/mock", "hdk/test_utils"]