[package]
name = "fractal_tribute"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fractal_tribute"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }
ethers-core = { version = "2.0.5"}

fractal_tribute_integrity = { workspace = true } 
resvg = "0.35.0"
base64 = "0.21.4"
serde_json = "1.0.94"

[features]
mock = ["hdk/mock", "hdk/test_utils"]
