[package]
name = "nft_payload_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nft_payload_integrity"

[dependencies]
ethers-core = "2.0.4"
hdi = { workspace = true }
hdk = { workspace = true }

serde = { workspace = true }

[features]
mock = ["hdk/mock", "hdk/test_utils"]
