[package]
name = "nft_payload_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nft_payload_integrity"

[dependencies]
hdi = { workspace = true }
hdk = { workspace = true }

serde = { workspace = true }
ethers-core = { version = "2.0.5"}

[features]
mock = ["hdk/mock", "hdk/test_utils"]

[dev-dependencies]
fixt = "0.1"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
ethers-signers = { version = "2.0.4"}
